<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:orientation="vertical">
		<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_title"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text1"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text3"/>
	 	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text4"/>
	 	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text5"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text6"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text7"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text11"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text2"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text12"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text8"/>
	  	<TextView 
		  	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/about_text9"/>
	</LinearLayout>
</ScrollView>